k8s/providers/hetzner/infrastructure/controllers/kubelet-serving-cert-approver/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-cert-approver
  namespace: kubelet-serving-cert-approver
spec:
  endpointSelector: {}
  egress:
    # Kube API for approving CSRs
    - toEntities:
        - kube-apiserver
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
